--- a/TestFlowersClassification.ipynb
+++ b/TestFlowersClassification.ipynb
@@ -230,6 +230,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Tinh cac chi so mo hinh\n",
         "y_pred = new_model.predict(X_test,verbose=0)\n",
         "rounded_labels=np.argmax(y_test, axis=1)\n",
         "rounded_pred=np.argmax(y_pred, axis=1)\n",
