--- a/TestFlowersClassification.ipynb
+++ b/TestFlowersClassification.ipynb
@@ -92,7 +92,8 @@
       "source": [
         "# Lấy các đường dẫn đến ảnh.\n",
         "image_path_test = list(paths.list_images('Test/'))\n",
-        "print(image_path_test)"
+        "print(image_path_test)",
+        "image_path_test =   sorted(image_path_test)"
       ],
       "metadata": {
         "id": "OmbhR-1aWukv"
